--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Nii Boiman Central</title>
     <meta name="description" content="TAC-GH, NII Boiman Central Website with Aposor Kofi" />
     <meta name="author" content="Kofi Arhin" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="logo.png" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
