--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="description" content="TAC-GH, NII Boiman Central Website with Aposor Kofi" />
     <meta name="author" content="Kofi Arhin" />
     <meta property="og:image" content="logo.png" />
+    
+    <!-- PWA meta tags -->
+    <meta name="theme-color" content="#1a1a1a" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
 
   <body>
