--- a/index.html
+++ b/index.html
@@ -3,21 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nii Boiman Central</title>
-    <meta name="description" content="TAC-GH, Nii Boiman Central & AI chat" />
-    <meta name="author" content="Kofi Arhin" />
-    <meta property="og:image" content="logo.png" />
-    
-    <!-- PWA meta tags -->
-    <meta name="theme-color" content="#1a1a1a" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  </head>
+    <title>TAC-GH, Nii Boiman Central & AI chat</title>
 
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="TAC-GH, Nii Boiman Central & AI chat" />
+    <meta property="og:description" content="Connect with us, chat with our christian-based AI chatbot." />
+    <meta property="og:image" content="https://i.ibb.co/5FQhRnj/20240331-125859.jpg" />
+    <meta property="og:url" content="https://niiboimancentral.vercel.app" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="TAC-GH, Nii Boiman Central & AI chat" />
+    <meta name="twitter:description" content="Connect with us, chat with our christian-based AI chatbot." />
+    <meta name="twitter:image" content="https://i.ibb.co/5FQhRnj/20240331-125859.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  </head>
   <body>
+    <!-- Add the root div for React to mount -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Fallback content in case JavaScript fails to load -->
+    <noscript>
+      <h1>TAC-GH, Nii Boiman Central & AI chat</h1>
+      <p>Connect with us, chat with our christian-based AI chatbot.</p>
+      <p>Please enable JavaScript to use this application.</p>
+    </noscript>
   </body>
 </html>
