--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <!-- Add the root div for React to mount -->
